--- a/vignettes/V1_Getting_Started.Rmd
+++ b/vignettes/V1_Getting_Started.Rmd
@@ -129,7 +129,7 @@ fit_3sp <- cxr_pm_multifit(data = obs_3sp,
                            focal_column = my.sp,
                            model_family = "RK",
                            # here we use a bounded method for demonstration purposes
-                           optimization_method = "L-BFGS-B", 
+                           optimization_method = "bobyqa",#"L-BFGS-B", 
                            covariates = salinity,
                            alpha_form = "pairwise",
                            lambda_cov_form = "global", # effect of covariates over lambda
