--- a/vignettes/V3_Coexistence_metrics.Rmd
+++ b/vignettes/V3_Coexistence_metrics.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Coexistence metrics"
 output: rmarkdown::html_vignette
-author: David García-Callejas and cxr team
+author: David Garcia-Callejas and cxr team
 vignette: >
   %\VignetteIndexEntry{coexistence metrics}
   %\VignetteEngine{knitr::rmarkdown}
