--- a/vignettes/V5_Abundance_projections.Rmd
+++ b/vignettes/V5_Abundance_projections.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Projecting species abundances"
 output: rmarkdown::html_vignette
-author: David García-Callejas and cxr team
+author: David Garcia-Callejas and cxr team
 vignette: >
   %\VignetteIndexEntry{Abundance projections}
   %\VignetteEngine{knitr::rmarkdown}
