--- a/vignettes/V1_Getting_started.Rmd
+++ b/vignettes/V1_Getting_started.Rmd
@@ -111,7 +111,7 @@ for(i in 1:length(salinity)){
 }
 ```
 
-Note how the data is passed in a list with as many elements as focal species. Each element is a dataframe with observations of the corresponding focal species. Same for the covariate, it must be a list with as many elements as focal species. Each element is a dataframe (or a matrix) with a single column and the same number of observations as its associated species data.
+Note how the data is passed in a list with as many elements as focal species. Each element is a dataframe with observations of the corresponding focal species. Same for the covariates data, it must be a list with as many elements as focal species. Each element is a dataframe (or a matrix) with a column for each covariate (one, in this case) and the same number of observations as its associated species data.
 
 ```{r}
 names(obs_3sp)
@@ -122,7 +122,7 @@ head(salinity[[1]])
 nrow(salinity[[1]])
 ```
 
-And we fit the model as above, but using the `cxr_pm_multifit` function.
+We fit the model as above, but using the `cxr_pm_multifit` function.
 
 ```{r}
 fit_3sp <- cxr_pm_multifit(data = obs_3sp,
@@ -160,7 +160,7 @@ summary(fit_3sp)
 
 The numerical estimation of parameters depends on the model with which to estimate fitness values, the optimization method, and the underlying data. In our example dataset, some species are better represented than others, and the function will raise warnings if the estimation can be improved or, for example, if any fitted parameter is equal to the lower or upper bounds provided. The `cxr_pm_multifit` function will behave conservatively and return `NULL` if parameter fitting fails for *any* of the focal species passed as arguments, printing an informative message about which species failed to fit.
 
-Importantly, bounded methods can be very sensitive to the initial values and bounds, so, as in any numerical optimization problem, you should double-check the values obtained, at least by computing standard errors on your parameters with an adequate number of boostrap samples, and preferably by performing sensitivity analyses on the different parameters (in this and other vignettes, we have not included any of these checks, as our examples are merely for demonstration purposes). Aside from these recommendations, in the `cxr` objects returned from our functions, the log-likelihood of the fit is also included, which may be useful in helping users choose a certain optimization algorithm for a particular dataset. In general, it is recommended to test different optimization algorithms, as they may produce fairly different results (Mullen 2014). In this example, the method used ("L-BFGS-B", a well-established bounded optimization algorithm) returns the following log-likelihood values:
+Importantly, bounded methods can be very sensitive to the initial values and bounds, so, as in any numerical optimization problem, you should double-check the values obtained, at least by computing standard errors on your parameters with an adequate number of boostrap samples, and preferably by performing sensitivity analyses on the different parameters (in this and other vignettes, we have not included any of these checks, as our examples are merely for demonstration purposes). Aside from these recommendations, in the `cxr` objects returned from our functions, the negative log-likelihood of the fit is also included, which may be useful in helping users choose a certain optimization algorithm for a particular dataset. Remember that the convention is to present negative log-likelihood, and more negative values are better. In general, it is recommended to test different optimization algorithms, as they may produce fairly different results (Mullen 2014). In this example, the method used ("L-BFGS-B", a well-established bounded optimization algorithm) returns the following *negative* log-likelihood values:
 
 ```{r}
 fit_3sp$log_likelihood
@@ -190,6 +190,78 @@ We can retrieve the fitted values for 'lambda_cov' ($\theta$) and 'alpha_cov' ($
 fit_3sp$lambda_cov
 fit_3sp$alpha_cov
 ```
+
+**Parameter boundaries**
+
+`cxr` includes the possibility of providing boundaries for your parameters, so that the fitted values fall inside a certain interval. This is done via the arguments `lower_bounds` and `upper_bounds` of the fitting functions. These arguments accept a list whose elements must be named and correspond to one or more of the function parameters, i.e. `lambda`, `alpha_intra`, `alpha_inter`, `lambda_cov`, and `alpha_cov`. If these boundaries are of length 1, as in this example:
+
+```{r}
+lower_bounds = list(lambda = 0,
+                    alpha_intra = 0,
+                    alpha_inter = -1,
+                    lambda_cov = 0,
+                    alpha_cov = 0)
+upper_bounds = list(lambda = 100,
+                    alpha_intra = 1,
+                    alpha_inter = 1,
+                    lambda_cov = 1,
+                    alpha_cov = 1)
+```
+
+the same boundaries will be used for all values in the appropriate set, e.g. each interspecific alpha term (`alpha_inter`) will have the same boundaries. Otherwise, if you are interested in fitting parameters for more than one covariate, you may want to specify varying boundaries for `lambda_cov` and `alpha_cov` depending on the different covariates. In that case, the functions accept, for these elements, vectors with as many values as covariates. For example, if you have two covariates for which you want to calculate associated `lambda_cov` and `alpha_cov` values, but these covariates have very different magnitudes, you may provide two `lambda_cov` and `alpha_cov` boundaries.
+
+```{r}
+# create two stochastic covariates
+# with values for three sp
+example_cov <- list()
+for(i.sp in 1:length(obs_3sp)){
+  cov1 <- runif(nrow(obs_3sp[[i.sp]]),0,1)
+  cov2 <- runif(nrow(obs_3sp[[i.sp]]),10,100)
+  example_cov[[i.sp]] <- matrix(c(cov1,cov2),
+                                nrow = nrow(obs_3sp[[i.sp]]),
+                                ncol = 2)
+}
+
+names(example_cov) <- names(obs_3sp)
+
+fit_multi_cov <- cxr_pm_multifit(data = obs_3sp,
+                           focal_column = my.sp,
+                           model_family = "RK",
+                           # here we use a bounded method for demonstration purposes
+                           optimization_method = "L-BFGS-B", 
+                           covariates = example_cov,
+                           alpha_form = "pairwise",
+                           lambda_cov_form = "global", # effect of covariates over lambda
+                           alpha_cov_form = "pairwise", # effect of covariates over alpha
+                           # note how lambda_cov and alpha_cov
+                           # have different initial values for each covariate effect
+                           initial_values = list(lambda = 1,
+                                                 alpha_intra = 0.1,
+                                                 alpha_inter = 0.1,
+                                                 lambda_cov = c(0.1,0.01),
+                                                 alpha_cov = c(0.1,0.01)),
+                           # note how lambda_cov and alpha_cov
+                           # have different boundaries for each covariate effect
+                           lower_bounds = list(lambda = 0,
+                                               alpha_intra = 0,
+                                               alpha_inter = -1,
+                                               lambda_cov = c(0,-1),
+                                               alpha_cov = c(0,-1)),
+                           upper_bounds = list(lambda = 100,
+                                               alpha_intra = 1,
+                                               alpha_inter = 1,
+                                               lambda_cov = c(1,0.1),
+                                               alpha_cov = c(1,0.1)),
+                           bootstrap_samples = 3)
+
+# summary
+summary(fit_multi_cov)
+
+# covariate terms
+fit_multi_cov$lambda_cov
+fit_multi_cov$alpha_cov
+```
+
 
 **References**
 
