--- a/vignettes/V1_Getting_started.Rmd
+++ b/vignettes/V1_Getting_started.Rmd
@@ -68,7 +68,10 @@ fit_homa <- cxr_pm_fit(data = obs_homa,
                        #                     alpha_intra = 1,
                        #                     alpha_inter = 1),
                        fixed_terms = NULL,
-                       bootstrap_samples = 3) # a low number for demonstration purposes, increase it for robust results.
+                       # a low number of bootstrap samples
+                       # for demonstration purposes, 
+                       # increase it for robust results.
+                       bootstrap_samples = 3) 
 ```
 
 For a quick summary of the fit, we can run a summary on the resulting object.
@@ -115,10 +118,15 @@ Note how the data is passed in a list with as many elements as focal species. Ea
 
 ```{r}
 names(obs_3sp)
+
+# observation data
 head(obs_3sp[[1]])
+# number of fitness observations
 nrow(obs_3sp[[1]])
 
+# salinity data
 head(salinity[[1]])
+# number of covariate observations
 nrow(salinity[[1]])
 ```
 
@@ -129,7 +137,7 @@ fit_3sp <- cxr_pm_multifit(data = obs_3sp,
                            focal_column = my.sp,
                            model_family = "RK",
                            # here we use a bounded method for demonstration purposes
-                           optimization_method = "L-BFGS-B", 
+                           optimization_method = "bobyqa", 
                            covariates = salinity,
                            alpha_form = "pairwise",
                            lambda_cov_form = "global", # effect of covariates over lambda
@@ -180,9 +188,9 @@ $\alpha_* + \sum_{k=1}^{s} \psi_k c_k$
 
 where $*$ represents the set of all pairwise interaction for a given focal species, and $\psi_k$ is the global parameter relating covariate $k$ to the alpha values. The last possibility included in `cxr` is for the effect of covariates over alpha values to be interaction-specific, which is coded by specifying 'alpha_cov_form' as 'pairwise':
 
-$\alpha_{ij} + \sum_{k=1}^{s} \psi_{ij} c_k$
+$\alpha_{ij} + \sum_{k=1}^{s} \psi_{ijk} c_k$
 
-In this case, each covariate $c_k$ will have a specific parameter $\psi_{ij}$ for its effect over each interaction $\alpha_{ij}$.
+In this case, each covariate $c_k$ will have a specific parameter $\psi_{ijk}$ for its effect over each interaction $\alpha_{ij}$.
 
 We can retrieve the fitted values for 'lambda_cov' ($\theta$) and 'alpha_cov' ($\psi$) simply from the output of the function:
 
@@ -211,51 +219,99 @@ upper_bounds = list(lambda = 100,
 the same boundaries will be used for all values in the appropriate set, e.g. each interspecific alpha term (`alpha_inter`) will have the same boundaries. Otherwise, if you are interested in fitting parameters for more than one covariate, you may want to specify varying boundaries for `lambda_cov` and `alpha_cov` depending on the different covariates. In that case, the functions accept, for these elements, vectors with as many values as covariates. For example, if you have two covariates for which you want to calculate associated `lambda_cov` and `alpha_cov` values, but these covariates have very different magnitudes, you may provide two `lambda_cov` and `alpha_cov` boundaries.
 
 ```{r}
-# create two stochastic covariates
-# with values for three sp
-example_cov <- list()
-for(i.sp in 1:length(obs_3sp)){
-  cov1 <- runif(nrow(obs_3sp[[i.sp]]),0,1)
-  cov2 <- runif(nrow(obs_3sp[[i.sp]]),10,100)
-  example_cov[[i.sp]] <- matrix(c(cov1,cov2),
-                                nrow = nrow(obs_3sp[[i.sp]]),
-                                ncol = 2)
-  colnames(example_cov[[i.sp]]) <- c("cov1","cov2")
+# fit three species, as in the previous example
+data <- neigh_list[1:3]
+
+# keep only fitness and neighbours columns
+for(i in 1:length(data)){
+  data[[i]] <- data[[i]][,2:length(data[[i]])]
+}
+focal_column <- names(data)
+
+# covariates
+# in this example, we use salinity
+# and two more covariates, randomly generated
+
+data("salinity_list")
+
+# observations for the first three species
+cov_list <- salinity_list[1:3]
+
+for(i in 1:length(cov_list)){
+  # keep only salinity column
+  cov_list[[i]] <- as.matrix(cov_list[[i]][,2:length(cov_list[[i]])])
+  
+  # add two random covariates
+  cov_list[[i]] <- cbind(cov_list[[i]],
+                         runif(nrow(cov_list[[i]]),1,10),
+                         runif(nrow(cov_list[[i]]),10,100))
+  colnames(cov_list[[i]]) <- c("salinity","cov2","cov3")
 }
 
-names(example_cov) <- names(obs_3sp)
+# this is how each element of the covariates list looks like
+head(cov_list[[1]])
 
-fit_multi_cov <- cxr_pm_multifit(data = obs_3sp,
-                           focal_column = my.sp,
-                           model_family = "RK",
-                           # here we use a bounded method for demonstration purposes
-                           optimization_method = "bobyqa", 
-                           covariates = example_cov,
-                           alpha_form = "pairwise",
-                           lambda_cov_form = "global", # effect of covariates over lambda
-                           alpha_cov_form = "pairwise", # effect of covariates over alpha
-                           # note how lambda_cov and alpha_cov
-                           # have different initial values for each covariate effect
-                           initial_values = list(lambda = 1,
-                                                 alpha_intra = 0.1,
-                                                 alpha_inter = 0.1,
-                                                 lambda_cov = c(0.1,0.01),
-                                                 alpha_cov = c(0.1,0.01)),
-                           # note how lambda_cov and alpha_cov
-                           # have different boundaries for each covariate effect
-                           lower_bounds = list(lambda = 0,
-                                               alpha_intra = 0,
-                                               alpha_inter = -1,
-                                               lambda_cov = c(0,-1),
-                                               alpha_cov = c(0,-1)),
-                           upper_bounds = list(lambda = 100,
-                                               alpha_intra = 1,
-                                               alpha_inter = 1,
-                                               lambda_cov = c(1,0.1),
-                                               alpha_cov = c(1,0.1)),
-                           bootstrap_samples = 3)
+# function parameters
+model_family <- "BH"
+covariates <- cov_list
+# bobyqa is generally more robust than other bounded methods
+optimization_method <- "bobyqa"
+alpha_form <- "pairwise"
+lambda_cov_form <- "global"
+alpha_cov_form <- "pairwise"
 
-# summary
+# note how lambda_cov and alpha_cov
+# have different initial values for each covariate effect
+# the commented assignations are also possible, 
+# giving equal initial values to all parameters
+initial_values = list(lambda = 1,
+                      alpha_intra = 0.1,
+                      alpha_inter = 0.1,
+                      lambda_cov = c(0.1,0.2,0.1),
+                      alpha_cov = c(0.1,0.2,0.1))
+# lambda_cov = c(0.1),
+# alpha_cov = c(0.1))
+
+# same with boundaries
+lower_bounds = list(lambda = 0,
+                    alpha_intra = 0,
+                    alpha_inter = -1,
+                    lambda_cov = c(-1,0,-1),
+                    alpha_cov = c(-1,0,-1))
+# lambda_cov = c(-1),
+# alpha_cov = c(-1))
+
+upper_bounds = list(lambda = 100,
+                    alpha_intra = 1,
+                    alpha_inter = 1,
+                    lambda_cov = c(1,2,1),
+                    alpha_cov = c(1,2,1))
+# lambda_cov = c(1),
+# alpha_cov = c(1))
+
+fixed_terms <- NULL
+bootstrap_samples <- 3
+
+# this fit is fairly complex, it may take a while
+# it also raises warnings, suggesting that either the data,
+# model, or initial values/boundaries can be improved.
+# This is consistent with having observational data
+# and, furthermore, random covariates
+fit_multi_cov <- cxr_pm_multifit(data = data,
+                                 focal_column = focal_column,
+                                 model_family = model_family,
+                                 covariates = covariates,
+                                 optimization_method = optimization_method,
+                                 alpha_form = alpha_form,
+                                 lambda_cov_form = lambda_cov_form,
+                                 alpha_cov_form = alpha_cov_form,
+                                 initial_values = initial_values,
+                                 lower_bounds = lower_bounds,
+                                 upper_bounds = upper_bounds,
+                                 fixed_terms = fixed_terms,
+                                 bootstrap_samples = bootstrap_samples)
+
+# general summary
 summary(fit_multi_cov)
 
 # covariate terms
